--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.7.1",
     "history": "^1.13.0",
+    "lodash": "^3.10.1",
     "react": "=0.14.0",
     "react-bootstrap": "^0.28.1",
     "react-dom": "=0.14.0",
