--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "babel-eslint": "^4.1.4",
+    "babel-plugin-transform-object-assign": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.2",
     "babelify": "^7.2.0",
     "browserify": "=12.0.1",
