--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "devDependencies": {
+    "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.4",
+    "babel-loader": "^6.2.0",
     "babel-plugin-transform-object-assign": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.2",
-    "babelify": "^7.2.0",
-    "browserify": "=12.0.1",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.7.1",
     "history": "^1.13.0",
+    "json-loader": "^0.5.4",
     "lodash": "^3.10.1",
     "react": "=0.14.0",
     "react-bootstrap": "^0.28.1",
@@ -16,10 +17,10 @@
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc4",
     "react-router-bootstrap": "^0.19.3",
-    "reactify": "=1.1.1",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "webpack": "^1.12.9"
   },
   "scripts": {
     "build": "browserify -t [ babelify --presets [ react ] ] src/index.js -o bundle.js",
