--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "version": "0.1.2",
+  "private": true,
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.4",
@@ -7,11 +8,13 @@
     "babel-plugin-transform-object-assign": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.2",
+    "chai": "^3.4.1",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.7.1",
     "history": "^1.13.0",
     "json-loader": "^0.5.4",
     "lodash": "^3.10.1",
+    "mocha": "^2.3.4",
     "react": "=0.14.0",
     "react-bootstrap": "^0.28.1",
     "react-dom": "=0.14.0",
@@ -25,7 +28,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
