--- a/package.json
+++ b/package.json
@@ -12,7 +12,17 @@
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.7.1",
     "history": "^1.13.0",
+    "istanbul-instrumenter-loader": "^0.1.3",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.15",
+    "karma-chai": "^0.1.0",
+    "karma-cli": "^0.1.1",
+    "karma-coverage": "^0.5.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^1.1.3",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
     "lodash": "^3.10.1",
     "mocha": "^2.3.4",
     "react": "=0.14.0",
@@ -29,7 +39,7 @@
   "scripts": {
     "build": "webpack",
     "lint": "eslint src",
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
