--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ script:
  - npm run build
  - npm test
 
+after_success:
+ - cat coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+
 branches:
   only:
     - gh-pages
