--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "babel-preset-react": "^6.1.2",
     "chai": "^3.4.1",
     "coveralls": "^2.11.4",
+    "css-loader": "^0.23.0",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.7.1",
+    "file-loader": "^0.8.5",
     "history": "1.13.1",
     "istanbul-instrumenter-loader": "^0.1.3",
     "json-loader": "^0.5.4",
@@ -36,10 +38,12 @@
     "redux-devtools": "^2.1.5",
     "redux-thunk": "^1.0.0",
     "sinon": "^2.0.0-pre",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "rm -rf dist && NODE_ENV=production webpack",
+    "build_dev": "webpack",
     "lint": "eslint src",
     "test": "karma start"
   },
