- Still setting up deploying with Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ before_install:
 
 script:
  - npm run lint
- - npm run build
  - npm test
 
 after_success:
  - cat coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+ - ./tools/deploy.sh
 
 branches:
   only:
