--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MoombaDS/quest.git"
+  },
+  "dependencies": {
+    "ramda": "^0.18.0"
   }
 }
