--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.7.1",
     "file-loader": "^0.8.5",
-    "history": "1.13.1",
+    "history": "^1.13.1",
     "istanbul-instrumenter-loader": "^0.1.3",
     "json-loader": "^0.5.4",
     "karma": "^0.13.15",
